@@ -1,4 +1,6 @@
 == 0.8.0 Dodgy Dentist release
+ * Make Server.new arguments more flexible, can now specify any of host, port, app or hash options.
+ * Add --backend option to specified which backend to use, closes #55
  * Serve static file only on GET and HEAD requests in Rails adapter, fixes #58
  * Add threaded option to run server in threaded mode, calling the application in a
    thread allowing for concurrency in the Rack adapter, closes #46
